feat/advices&visuals

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
     <section id="reel"></section>
 
-    <section id="slide">
-        << Slide on the images to see more >>
+    <section id="slide" onpointerenter="advice()">
+        << Slide above to see more images >>
     </section>
 
     <section id="info">
