--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <section id="reel"></section>
 
     <section id="slide" onpointerenter="advice()">
-        << Slide above to see more images >>
+        << Touch the pictures to learn more! >>
     </section>
 
     <button id="infoButton" onclick="toggleInfo(true)">
